2005-02-04  Jeremy Handcock  <handcock@redhat.com>

	* developer/oprofile-design.html: Updates from Keith.
	* developer/structure.html: Update.

2004-10-21  Jeremy Handcock  <jbh@ualberta.ca>

	* developer/structure.html: Change my status to independent.

2004-10-18  Jeremy Handcock  <handcock@redhat.com>

	* index.html: Update news, add downloads link.
	* downloads.html: New.

2004-10-13  Jeremy Handcock  <handcock@redhat.com>

	* index.html: Correct path to stylesheet.
	* developer/docs.html: Correct link to design document.
