@@ -20,10 +20,33 @@
 </table>
 
 <table class="section">
+<tr><td>Installation</td></tr>
+</table>
+<p>When installing Eclipse-OProfile from a .tar.gz archive, you must do the
+following:</p>
+<ol>
+<li>Remove any previous Eclipse-OProfile installations.</li>
+<li>Copy the <code>eclipse-oprofile.tar.gz</code> archive to the directory
+above your Eclipse installation directory.  For example, an <code>ls</code> in
+this directory should show your <code>eclipse</code> installation
+directory.</li>
+<li>Change into the directory mentioned above and type:
+<code>tar zxf eclipse-oprofile.tar.gz</code></li>
+<li>From the same directory, type: 
+<code>cd eclipse/plugins/org.eclipse.cdt.oprofile.core.linux*</code></li>
+<li>Set the executable bits on the install scripts by typing: 
+<code>chmod +x install &amp;&amp; chmod +x update-perms</code></li>
+<li>Install authentication-related files (you must have root privileges to do 
+this) by typing: <code>./install</code></li>
+<li>Update permissions on Eclipse-OProfile executables by typing: 
+<code>./update-perms</code></li>
+</ol>
+
+<table class="section">
 <tr><td>Downloads</td></tr>
 </table>
 <p><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile-0_5_4-branch.zip">Eclipse-OProfile for OProfile 0.5.4</a> (October 13, 2004)</p>
-<p><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile.zip">Eclipse-OProfile</a> for Oprofile 0.8 (October 13, 2004)</p>
+<p><a href="http://people.redhat.com/jhealy/plugins/eclipse-oprofile.zip">Eclipse-OProfile for Oprofile 0.8</a> (October 13, 2004)</p>
 
 </body>
 </html>
