@@ -42,10 +42,10 @@ Eclipse-OProfile.</p>
 href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License</a> and
 is implemented in Java as a set of plug-ins to the <a
 href="http://www.eclipse.org">Eclipse</a> platform.  One small exception is the
-<code>opxml</code> application, which is licensed separately under the terms of
-the <a href="http://www.gnu.org/licenses/licenses.html#GPL" target="_blank">GNU
-General Public License</a>.</p>
-<!-- End About section -->
+<code>opxml</code> application, which is dual-licensed separately under the
+terms of the Eclipse Public License and the <a
+href="http://www.gnu.org/licenses/licenses.html#GPL" target="_blank">GNU
+General Public License</a>.</p> <!-- End About section -->
 
 <!-- Begin News section -->
 <table class="section">
@@ -53,6 +53,12 @@ General Public License</a>.</p>
 </table>
 <table width="100%" cellspacing="5" cellpadding="5">
 <tr><td>
+
+<p class="subsection">Installation instructions</p>
+
+<p>Please see the new installation instructions on the <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/downloads.html?cvsroot=Tools_Project">Downloads</a> page.</p>
+
+<p class="timestamp">posted 2004-05-27 by Jeremy Handcock</p>
 
 <p class="subsection">Eclipse-OProfile is now available!</p>
 
@@ -120,7 +126,7 @@ Bugs are filed under the CDT project, CDT-Contrib component</td>
 </tr>
 
 <tr>
-<td>Mailing List</td>
+<td><a href="https://dev.eclipse.org/mailman/listinfo/cdt-contrib-dev">Mailing List</a></td>
 <td><a href="mailto:cdt-contrib-dev@eclipse.org">cdt-contrib-dev@eclipse.org</a></td>
 </tr>
 
